Update homepage footer

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ nav ul li {
   height: 30%;
 }
 
+.skedgoLogoFooter {
+  width: 5%;
+  height: 10%;
+}
+
 .manojProfilePic {
   width: 10%;
   height: 10%;
