--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,18 @@ nav ul li {
   height: 10%;
 }
 
+.buyMeACoffeeLogo {
+  width: 15%;
+  height: 30%;
+  padding: 10px;
+}
+
+.kofiLogo {
+  width: 11%;
+  height: 30%;
+  padding: 10px;
+}
+
 .manojProfilePic {
   width: 10%;
   height: 10%;
