--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,3 @@
-/* Navbar.css */
-
 .navbar {
     background-color: #333; /* Change this to your desired background color */
     padding: 1rem 0; /* Adjust padding as needed */
@@ -39,4 +37,38 @@
   .navbar-links a:hover {
     text-decoration: underline;
   }
-  
+
+  /* Mobile hamburger menu */
+.hamburger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.hamburger div {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  .navbar-links {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+  }
+
+  .navbar-links.open {
+    display: flex;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
